--- a/package.json
+++ b/package.json
@@ -21,13 +21,21 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/mapped-types": "*",
+    "@nestjs/microservices": "^11.1.11",
     "@nestjs/platform-express": "^11.0.1",
-    "@prisma/client": "^7.2.0",
+    "@prisma/client": "^6.9.0",
+    "@types/ioredis": "^4.28.10",
+    "@types/winston": "^2.4.4",
     "class-validator": "^0.14.3",
-    "prisma": "^7.2.0",
+    "ioredis": "^5.8.2",
+    "nest-winston": "^1.10.2",
+    "prisma": "^6.9.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.2",
+    "winston": "^3.19.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
