--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "@prisma/client": "^6.9.0",
     "@types/ioredis": "^4.28.10",
     "@types/winston": "^2.4.4",
+    "amqp-connection-manager": "^5.0.0",
+    "amqplib": "^0.10.9",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "ioredis": "^5.8.2",
     "nest-winston": "^1.10.2",
@@ -43,6 +46,7 @@
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
+    "@types/amqplib": "^0.10.8",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
